1. Fix problem with splash screen that was causing footer to push down beyond viewable window. 2. Add more whitespace to variant cards.

--- a/assets/css/sass/_simplify.sass
+++ b/assets/css/sass/_simplify.sass
@@ -4,6 +4,14 @@
 .card-label
   text-transform: none !important
 
+.track-expand
+  padding-top: 6px !important
+  padding-bottom: 10px !important
+
+#variant-heading
+  min-width: 150px !important
+  max-width: 150px !important
+
 #region-track.level-simple
   display: block !important
   margin-left: 0px !important
