--- a/assets/css/sass/site.sass
+++ b/assets/css/sass/site.sass
@@ -927,6 +927,13 @@ section
 .stats-label
   margin-bottom: 0px
 
+#variant-heading
+  float: left
+  display: inline-block
+  min-width: 250px
+  max-width: 250px
+  margin-top: 2px
+
 .variant-count
   order: 2
   -webkit-order: 2
